--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4
 astroid==2.4.1
+attrs==19.3.0
 beautifulsoup4==4.9.0
 bs4==0.0.1
 certifi==2020.4.5.1
@@ -7,21 +8,26 @@ chardet==3.0.4
 click==7.1.2
 cssselect==1.1.0
 deprecation==2.1.0
-eyeD3==0.9.5
 fake-useragent==0.1.11
 filetype==1.0.7
 idna==2.9
+importlib-metadata==1.6.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 lxml==4.5.0
 mccabe==0.6.1
+more-itertools==8.2.0
+mutagen==1.44.0
 packaging==20.3
 parse==1.15.0
+pluggy==0.13.1
+py==1.8.1
 pyee==7.0.2
 pylint==2.5.2
 pyparsing==2.4.7
 pyppeteer==0.2.2
 pyquery==1.4.1
+pytest==5.4.2
 requests==2.23.0
 requests-html==0.10.0
 six==1.14.0
@@ -31,5 +37,7 @@ tqdm==4.46.0
 typed-ast==1.4.1
 urllib3==1.25.9
 w3lib==1.22.0
+wcwidth==0.1.9
 websockets==8.1
 wrapt==1.12.1
+zipp==3.1.0
